# armController

./: .env.tpl  .gitignore  LiftControl.py  README.md  api.py  apiDirect.py  arduinoControl.py  armControlSocket.py  armMQ.py  armPortConnect.py  armServerSocket.py  armState.py  bom.txt  commands.txt  config.py  headServo.py  interview.md  pyControl.py  requirements.txt  servoConfig.py  servoControl.py  servoMQ.py  servoState.py  startServer.bat  stm32Control.py  task_log.txt
ArmClient/: test.html
CAN_Analyzer/: python3.8.0.py
HandTracking/: README.md  pyproject.toml
HandTracking/HandTracking/: main.py
api/: api.py  apiServo.py
arm/: armConnect.py  armControlSocket.py  armMQ.py  armPortConnect.py  armServerSocket.py
client/: armClient.py  servoClient.py
data/: config.json
encoder/: 12ChannelEncoder.py  12ChannelEncoder2.py  12MeganeticEncoder.py  32Channel.py  KT485Commu.md  KT485Encoder.py  a5600Encoder.ino  gearAnalyzer.py  i2cDoc.txt  i2cMT6708.ino  i2cRDK.py  i2cdia.py  ii2MultiChannel.ino  iicMultiChannelClean.ino  iicMultiChannelPassive.ino  iicMultipleReader.py  ma730Reader.ino  mqttMessageCompressor.py  mqttPotentiometerPublisher.py  mqttPotentiometerReceiver.py  positionArduinoOdrive.py  positionMapper.py  positionOdrive.py  readFromSTM32G4.py  rs485Encoder.py  rs485Encoder16Bit.py  rs485EncoderReader.py  spiReader.py
hand/: 12channel.c  12channelV1.c  12channelV3.c  12channelv2.c  linearServo.py  linear_motor_controller.py  newMotorBoard.py  research.txt  servoControl.py  softstartVolt.c  stm32Control.py  stm32HandControl.py  wristLinearMotor.py  (+4 more)
(+476 files in other folders)
